feat : applying spring boot best practices